--- a/DPRN3_U3/App.config
+++ b/DPRN3_U3/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+	<connectionStrings>
+		<add name="connectionstringDPRN3" connectionString="Data Source=localhost;Initial Catalog=EmpleadosUNAD;Persist Security Info=True;User ID=dev_usr;Password=password" providerName="System.Data.SqlClient" />
+	</connectionStrings>
 </configuration>
